main pages all to point to new cache manifest php passing their filename the main html page for each club if changed now invalidated the cache thus forcing an update which before only happened for supporting files

--- a/carlton.html
+++ b/carlton.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=carlton.html">
     <head>
         <meta charset="UTF-8" />
         <title>Carlton Scorecard</title>
@@ -95,6 +95,7 @@
                 <li class="arrow"><a href="#M4">Mens 4 <small> Division 6A</small></a></li>
                 <li class="arrow"><a href="#X1">Mixed 1 <small> Division 2A</small></a></li>
                 <li class="arrow"><a href="#X2">Mixed 2 <small> Division 4B</small></a></li>
+                <li class="arrow"><a href="#L">Ladies  <small> Division 2</small></a></li>
             </ul>
         </div>
 
@@ -187,6 +188,21 @@
                 <li class="arrow" id="X2-4"><small class="X2-4D"></small><a href="#match">Redhill 2</a></li>
                 <li class="arrow" id="X2-5"><small class="X2-5D"></small><a href="#match">Rolls Royce</a></li>
                 <li class="arrow" id="X2-6"><small class="X2-6D"></small><a href="#match">University Staff</a></li>
+            </ul>
+        </div>
+
+        <div id="L" class="fixtures">
+            <div class="toolbar">
+                <h1>Ladies </h1>
+                <a href="#" class="back">Teams</a>
+            </div>
+            <ul class="rounded">
+                <li class="arrow" id="L-1"><small class="L-1D"></small><a href="#match">Boots</a></li>
+                <li class="arrow" id="L-2"><small class="L-2D"></small><a href="#match">Crusader</a></li>
+                <li class="arrow" id="L-3"><small class="L-3D"></small><a href="#match">Mapperley Park 2</a></li>
+                <li class="arrow" id="L-4"><small class="L-4D"></small><a href="#match">Nottingham Vets 2</a></li>
+                <li class="arrow" id="L-5"><small class="L-5D"></small><a href="#match">Phoenixwood 2</a></li>
+                <li class="arrow" id="L-6"><small class="L-6D"></small><a href="#match">University 1</a></li>
             </ul>
         </div>
 
