--- a/crusader.html
+++ b/crusader.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=crusader.html">
     <head>
         <meta charset="UTF-8" />
         <title>Crusader Scorecard</title>
@@ -132,12 +132,11 @@
             </div>
             <ul class="rounded">
                 <li class="arrow" id="L-1"><small class="L-1D"></small><a href="#match">Boots</a></li>
-                <li class="arrow" id="L-2"><small class="L-2D"></small><a href="#match">Carlton1 01 09-2</a></li>
+                <li class="arrow" id="L-2"><small class="L-2D"></small><a href="#match">Carlton</a></li>
                 <li class="arrow" id="L-3"><small class="L-3D"></small><a href="#match">Mapperley Park 2</a></li>
                 <li class="arrow" id="L-4"><small class="L-4D"></small><a href="#match">Nottingham Vets 2</a></li>
                 <li class="arrow" id="L-5"><small class="L-5D"></small><a href="#match">Phoenixwood 2</a></li>
                 <li class="arrow" id="L-6"><small class="L-6D"></small><a href="#match">University 1</a></li>
-                <li class="arrow" id="L-7"><small class="L-7D"></small><a href="#match">aaa</a></li>
             </ul>
         </div>
 
