--- a/david_lloyd_aspley.html
+++ b/david_lloyd_aspley.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=david_lloyd_aspley.html">
     <head>
         <meta charset="UTF-8" />
         <title>David Lloyd Aspley Scorecard</title>
