--- a/east_leake.html
+++ b/east_leake.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=east_leake.html">
     <head>
         <meta charset="UTF-8" />
         <title>East Leake Scorecard</title>
