--- a/forest.html
+++ b/forest.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=forest.html">
     <head>
         <meta charset="UTF-8" />
         <title>Forest Scorecard</title>
@@ -137,13 +137,13 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X1-1"><small class="X1-1D"></small><a href="#match">Bingham 1</a></li>
-                <li class="arrow" id="X1-2"><small class="X1-2D"></small><a href="#match">Bingham 2</a></li>
-                <li class="arrow" id="X1-3"><small class="X1-3D"></small><a href="#match">Byron 1</a></li>
-                <li class="arrow" id="X1-4"><small class="X1-4D"></small><a href="#match">Phoenixwood 1</a></li>
-                <li class="arrow" id="X1-5"><small class="X1-5D"></small><a href="#match">University 1</a></li>
-                <li class="arrow" id="X1-6"><small class="X1-6D"></small><a href="#match">West Bridgford &amp; LE 1</a></li>
-                <li class="arrow" id="X1-7"><small class="X1-7D"></small><a href="#match">West Bridgford &amp; LE 2</a></li>
+                <li class="arrow" id="X1-1"><small class="X1-1D"></small><a href="#match">Bingham 2</a></li>
+                <li class="arrow" id="X1-2"><small class="X1-2D"></small><a href="#match">Byron 1</a></li>
+                <li class="arrow" id="X1-3"><small class="X1-3D"></small><a href="#match">Phoenixwood 1</a></li>
+                <li class="arrow" id="X1-4"><small class="X1-4D"></small><a href="#match">University 1</a></li>
+                <li class="arrow" id="X1-5"><small class="X1-5D"></small><a href="#match">West Bridgford &amp; LE 1</a></li>
+                <li class="arrow" id="X1-6"><small class="X1-6D"></small><a href="#match">West Bridgford &amp; LE 2nd3 03 225-2</a></li>
+                <li class="arrow" id="X1-7"><small class="X1-7D"></small><a href="#match">aaa</a></li>
             </ul>
         </div>
 
