--- a/mansfield_oaktree.html
+++ b/mansfield_oaktree.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=mansfield_oaktree.html">
     <head>
         <meta charset="UTF-8" />
         <title>Mansfield Oaktree Scorecard</title>
