--- a/nottingham_vets.html
+++ b/nottingham_vets.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=nottingham_vets.html">
     <head>
         <meta charset="UTF-8" />
         <title>Nottingham Vets Scorecard</title>
@@ -213,12 +213,11 @@
             </div>
             <ul class="rounded">
                 <li class="arrow" id="L2-1"><small class="L2-1D"></small><a href="#match">Boots</a></li>
-                <li class="arrow" id="L2-2"><small class="L2-2D"></small><a href="#match">Carlton1 01 09-2</a></li>
+                <li class="arrow" id="L2-2"><small class="L2-2D"></small><a href="#match">Carlton</a></li>
                 <li class="arrow" id="L2-3"><small class="L2-3D"></small><a href="#match">Crusader</a></li>
                 <li class="arrow" id="L2-4"><small class="L2-4D"></small><a href="#match">Mapperley Park 2</a></li>
                 <li class="arrow" id="L2-5"><small class="L2-5D"></small><a href="#match">Phoenixwood 2</a></li>
                 <li class="arrow" id="L2-6"><small class="L2-6D"></small><a href="#match">University 1</a></li>
-                <li class="arrow" id="L2-7"><small class="L2-7D"></small><a href="#match">aaa</a></li>
             </ul>
         </div>
 
