--- a/rolls_royce.html
+++ b/rolls_royce.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=rolls_royce.html">
     <head>
         <meta charset="UTF-8" />
         <title>Rolls Royce Scorecard</title>
