--- a/southwell_centre.html
+++ b/southwell_centre.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=southwell_centre.html">
     <head>
         <meta charset="UTF-8" />
         <title>Southwell Centre Scorecard</title>
