--- a/st_giles.html
+++ b/st_giles.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=st_giles.html">
     <head>
         <meta charset="UTF-8" />
         <title>St Giles Scorecard</title>
