--- a/university_staff.html
+++ b/university_staff.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=university_staff.html">
     <head>
         <meta charset="UTF-8" />
         <title>University Staff Scorecard</title>
