--- a/arboretum.html
+++ b/arboretum.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=arboretum.html">
     <head>
         <meta charset="UTF-8" />
         <title>Arboretum Scorecard</title>
