--- a/beeston_fields.html
+++ b/beeston_fields.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=beeston_fields.html">
     <head>
         <meta charset="UTF-8" />
         <title>Beeston Fields Scorecard</title>
