--- a/beeston_valley.html
+++ b/beeston_valley.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=beeston_valley.html">
     <head>
         <meta charset="UTF-8" />
         <title>Beeston Valley Scorecard</title>
