--- a/boots.html
+++ b/boots.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=boots.html">
     <head>
         <meta charset="UTF-8" />
         <title>Boots Scorecard</title>
@@ -178,13 +178,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="L-1"><small class="L-1D"></small><a href="#match">Carlton1 01 09-2</a></li>
+                <li class="arrow" id="L-1"><small class="L-1D"></small><a href="#match">Carlton</a></li>
                 <li class="arrow" id="L-2"><small class="L-2D"></small><a href="#match">Crusader</a></li>
                 <li class="arrow" id="L-3"><small class="L-3D"></small><a href="#match">Mapperley Park 2</a></li>
                 <li class="arrow" id="L-4"><small class="L-4D"></small><a href="#match">Nottingham Vets 2</a></li>
                 <li class="arrow" id="L-5"><small class="L-5D"></small><a href="#match">Phoenixwood 2</a></li>
                 <li class="arrow" id="L-6"><small class="L-6D"></small><a href="#match">University 1</a></li>
-                <li class="arrow" id="L-7"><small class="L-7D"></small><a href="#match">aaa</a></li>
             </ul>
         </div>
 
