--- a/experian.html
+++ b/experian.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=experian.html">
     <head>
         <meta charset="UTF-8" />
         <title>Experian Scorecard</title>
