--- a/gotham.html
+++ b/gotham.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=gotham.html">
     <head>
         <meta charset="UTF-8" />
         <title>Gotham Scorecard</title>
