--- a/kimberley.html
+++ b/kimberley.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=kimberley.html">
     <head>
         <meta charset="UTF-8" />
         <title>Kimberley Scorecard</title>
