--- a/naseeb.html
+++ b/naseeb.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=naseeb.html">
     <head>
         <meta charset="UTF-8" />
         <title>Naseeb Scorecard</title>
