--- a/radcliffe_knights.html
+++ b/radcliffe_knights.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=radcliffe_knights.html">
     <head>
         <meta charset="UTF-8" />
         <title>Radcliffe Knights Scorecard</title>
