--- a/redhill.html
+++ b/redhill.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=redhill.html">
     <head>
         <meta charset="UTF-8" />
         <title>Redhill Scorecard</title>
