--- a/university.html
+++ b/university.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=university.html">
     <head>
         <meta charset="UTF-8" />
         <title>University Scorecard</title>
@@ -169,13 +169,13 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X1-1"><small class="X1-1D"></small><a href="#match">Bingham 1</a></li>
-                <li class="arrow" id="X1-2"><small class="X1-2D"></small><a href="#match">Bingham 2</a></li>
-                <li class="arrow" id="X1-3"><small class="X1-3D"></small><a href="#match">Byron 1</a></li>
-                <li class="arrow" id="X1-4"><small class="X1-4D"></small><a href="#match">Forest 1</a></li>
-                <li class="arrow" id="X1-5"><small class="X1-5D"></small><a href="#match">Phoenixwood 1</a></li>
-                <li class="arrow" id="X1-6"><small class="X1-6D"></small><a href="#match">West Bridgford &amp; LE 1</a></li>
-                <li class="arrow" id="X1-7"><small class="X1-7D"></small><a href="#match">West Bridgford &amp; LE 2</a></li>
+                <li class="arrow" id="X1-1"><small class="X1-1D"></small><a href="#match">Bingham 2</a></li>
+                <li class="arrow" id="X1-2"><small class="X1-2D"></small><a href="#match">Byron 1</a></li>
+                <li class="arrow" id="X1-3"><small class="X1-3D"></small><a href="#match">Forest 1</a></li>
+                <li class="arrow" id="X1-4"><small class="X1-4D"></small><a href="#match">Phoenixwood 1</a></li>
+                <li class="arrow" id="X1-5"><small class="X1-5D"></small><a href="#match">West Bridgford &amp; LE 1</a></li>
+                <li class="arrow" id="X1-6"><small class="X1-6D"></small><a href="#match">West Bridgford &amp; LE 2nd3 03 225-2</a></li>
+                <li class="arrow" id="X1-7"><small class="X1-7D"></small><a href="#match">aaa</a></li>
             </ul>
         </div>
 
@@ -231,12 +231,11 @@
             </div>
             <ul class="rounded">
                 <li class="arrow" id="L1-1"><small class="L1-1D"></small><a href="#match">Boots</a></li>
-                <li class="arrow" id="L1-2"><small class="L1-2D"></small><a href="#match">Carlton1 01 09-2</a></li>
+                <li class="arrow" id="L1-2"><small class="L1-2D"></small><a href="#match">Carlton</a></li>
                 <li class="arrow" id="L1-3"><small class="L1-3D"></small><a href="#match">Crusader</a></li>
                 <li class="arrow" id="L1-4"><small class="L1-4D"></small><a href="#match">Mapperley Park 2</a></li>
                 <li class="arrow" id="L1-5"><small class="L1-5D"></small><a href="#match">Nottingham Vets 2</a></li>
                 <li class="arrow" id="L1-6"><small class="L1-6D"></small><a href="#match">Phoenixwood 2</a></li>
-                <li class="arrow" id="L1-7"><small class="L1-7D"></small><a href="#match">aaa</a></li>
             </ul>
         </div>
 
