--- a/west_bridgford_le.html
+++ b/west_bridgford_le.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="manifest.php">
+<html manifest="manifest.php?include=west_bridgford_le.html">
     <head>
         <meta charset="UTF-8" />
         <title>West Bridgford &amp; LE Scorecard</title>
@@ -93,7 +93,6 @@
                 <li class="arrow"><a href="#M2">Mens 2 <small> Division 1</small></a></li>
                 <li class="arrow"><a href="#M3">Mens 3 <small> Division 5A</small></a></li>
                 <li class="arrow"><a href="#X1">Mixed 1 <small>Premier </small></a></li>
-                <li class="arrow"><a href="#X2">Mixed 2 <small>Premier </small></a></li>
                 <li class="arrow"><a href="#X3">Mixed 3 <small> Division 2B</small></a></li>
                 <li class="arrow"><a href="#L">Ladies  <small>Premier </small></a></li>
             </ul>
@@ -151,29 +150,13 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X1-1"><small class="X1-1D"></small><a href="#match">Bingham 1</a></li>
-                <li class="arrow" id="X1-2"><small class="X1-2D"></small><a href="#match">Bingham 2</a></li>
-                <li class="arrow" id="X1-3"><small class="X1-3D"></small><a href="#match">Byron 1</a></li>
-                <li class="arrow" id="X1-4"><small class="X1-4D"></small><a href="#match">Forest 1</a></li>
-                <li class="arrow" id="X1-5"><small class="X1-5D"></small><a href="#match">Phoenixwood 1</a></li>
-                <li class="arrow" id="X1-6"><small class="X1-6D"></small><a href="#match">University 1</a></li>
-                <li class="arrow" id="X1-7"><small class="X1-7D"></small><a href="#match">West Bridgford &amp; LE 2</a></li>
-            </ul>
-        </div>
-
-        <div id="X2" class="fixtures">
-            <div class="toolbar">
-                <h1>Mixed 2</h1>
-                <a href="#" class="back">Teams</a>
-            </div>
-            <ul class="rounded">
-                <li class="arrow" id="X2-1"><small class="X2-1D"></small><a href="#match">Bingham 1</a></li>
-                <li class="arrow" id="X2-2"><small class="X2-2D"></small><a href="#match">Bingham 2</a></li>
-                <li class="arrow" id="X2-3"><small class="X2-3D"></small><a href="#match">Byron 1</a></li>
-                <li class="arrow" id="X2-4"><small class="X2-4D"></small><a href="#match">Forest 1</a></li>
-                <li class="arrow" id="X2-5"><small class="X2-5D"></small><a href="#match">Phoenixwood 1</a></li>
-                <li class="arrow" id="X2-6"><small class="X2-6D"></small><a href="#match">University 1</a></li>
-                <li class="arrow" id="X2-7"><small class="X2-7D"></small><a href="#match">West Bridgford &amp; LE 1</a></li>
+                <li class="arrow" id="X1-1"><small class="X1-1D"></small><a href="#match">Bingham 2</a></li>
+                <li class="arrow" id="X1-2"><small class="X1-2D"></small><a href="#match">Byron 1</a></li>
+                <li class="arrow" id="X1-3"><small class="X1-3D"></small><a href="#match">Forest 1</a></li>
+                <li class="arrow" id="X1-4"><small class="X1-4D"></small><a href="#match">Phoenixwood 1</a></li>
+                <li class="arrow" id="X1-5"><small class="X1-5D"></small><a href="#match">University 1</a></li>
+                <li class="arrow" id="X1-6"><small class="X1-6D"></small><a href="#match">West Bridgford &amp; LE 2nd3 03 225-2</a></li>
+                <li class="arrow" id="X1-7"><small class="X1-7D"></small><a href="#match">aaa</a></li>
             </ul>
         </div>
 
