remove choice of report sorting - this is now automatically decided based on whether the game is being played at home or away

--- a/beeston_valley.html
+++ b/beeston_valley.html
@@ -66,7 +66,7 @@
 		</div>
 	    </div>
 
-	    
+
 	    <h2>Scorecards (offline)</h2>
             <ul class="rounded">
                 <li class="arrow"><a href="#teams">Teams</a></li>
@@ -87,7 +87,7 @@
                 <p>Add this page to your home screen to view the custom icon, startup screen, and full screen mode.</p>
             </div>
         </div>
-        
+
         <div id="teams">
             <div class="toolbar">
                 <h1>Teams</h1>
@@ -414,20 +414,8 @@
             <div class="toolbar">
                 <h1>Match Report</h1>
                 <a class="back" href="#">back</a>
-                <a class="button slideup" id="SendMail" href="#">Email</a>
+                <a class="button" id="SendMail" href="#">Email</a>
             </div>
-
-		<h2>Sort results by...</h2>
-        <ul class="individual">
-		<li><select id="sort1">
-				<option value ="1" SELECTED>Home pairing</option>
-				<option value ="2">Away pairing</option>
-		</select></li>
-		<li><select id="sort2">
-				<option value ="0" SELECTED>Sequence</option>
-				<option value ="1">Home pairing</option>
-				<option value ="2">Away pairing</option>
-		</select></li></ul>
 
 		<h2>Email Subject</h2>
 			<ul class="rounded">
