--- a/bingham.html
+++ b/bingham.html
@@ -229,7 +229,7 @@
             <ul class="rounded">
                 <li class="arrow" id="X4-1"><a href="#match">Beeston Fields 2  <small class="X4-1D"></small></a></li>
                 <li class="arrow" id="X4-2"><a href="#match">Carlton 1  <small class="X4-2D"></small></a></li>
-                <li class="arrow" id="X4-3"><a href="#match">Crusader  <small class="X4-3D"></small></a></li>
+                <li class="arrow" id="X4-3"><a href="#match">Crusader 1  <small class="X4-3D"></small></a></li>
                 <li class="arrow" id="X4-4"><a href="#match">East Leake 2  <small class="X4-4D"></small></a></li>
                 <li class="arrow" id="X4-5"><a href="#match">Mapperley Park 2  <small class="X4-5D"></small></a></li>
                 <li class="arrow" id="X4-6"><a href="#match">Nottingham Vets 1  <small class="X4-6D"></small></a></li>
@@ -489,18 +489,6 @@
                 <a class="back" href="#">back</a>
                 <a class="button slideup" id="SendMail" href="#">Email</a>
             </div>
-
-		<h2>Sort results by...</h2>
-        <ul class="individual">
-		<li><select id="sort1">
-				<option value ="1" SELECTED>Home pairing</option>
-				<option value ="2">Away pairing</option>
-		</select></li>
-		<li><select id="sort2">
-				<option value ="0" SELECTED>Sequence</option>
-				<option value ="1">Home pairing</option>
-				<option value ="2">Away pairing</option>
-		</select></li></ul>
 
 		<h2>Email Subject</h2>
 			<ul class="rounded">
