--- a/crusader.html
+++ b/crusader.html
@@ -96,7 +96,7 @@
             <ul class="rounded">
 
                 <li class="arrow"><a href="#M">Mens  <small> Division 2B</small></a></li>
-                <li class="arrow"><a href="#X">Mixed  <small> Division 2A</small></a></li>
+                <li class="arrow"><a href="#X1">Mixed 1 <small> Division 2A</small></a></li>
                 <li class="arrow"><a href="#X2">Mixed 2 <small> Division 5A</small></a></li>
                 <li class="arrow"><a href="#L">Ladies  <small> Division 2</small></a></li>
             </ul>
@@ -117,18 +117,18 @@
             </ul>
         </div>
 
-        <div id="X" class="fixtures">
+        <div id="X1" class="fixtures">
             <div class="toolbar">
-                <h1>Mixed </h1>
+                <h1>Mixed 1</h1>
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X-1"><a href="#match">Beeston Fields 2  <small class="X-1D"></small></a></li>
-                <li class="arrow" id="X-2"><a href="#match">Bingham 4  <small class="X-2D"></small></a></li>
-                <li class="arrow" id="X-3"><a href="#match">Carlton 1  <small class="X-3D"></small></a></li>
-                <li class="arrow" id="X-4"><a href="#match">East Leake 2  <small class="X-4D"></small></a></li>
-                <li class="arrow" id="X-5"><a href="#match">Mapperley Park 2  <small class="X-5D"></small></a></li>
-                <li class="arrow" id="X-6"><a href="#match">Nottingham Vets 1  <small class="X-6D"></small></a></li>
+                <li class="arrow" id="X1-1"><a href="#match">Beeston Fields 2  <small class="X1-1D"></small></a></li>
+                <li class="arrow" id="X1-2"><a href="#match">Bingham 4  <small class="X1-2D"></small></a></li>
+                <li class="arrow" id="X1-3"><a href="#match">Carlton 1  <small class="X1-3D"></small></a></li>
+                <li class="arrow" id="X1-4"><a href="#match">East Leake 2  <small class="X1-4D"></small></a></li>
+                <li class="arrow" id="X1-5"><a href="#match">Mapperley Park 2  <small class="X1-5D"></small></a></li>
+                <li class="arrow" id="X1-6"><a href="#match">Nottingham Vets 1  <small class="X1-6D"></small></a></li>
             </ul>
         </div>
 
@@ -354,18 +354,6 @@
                 <a class="back" href="#">back</a>
                 <a class="button slideup" id="SendMail" href="#">Email</a>
             </div>
-
-		<h2>Sort results by...</h2>
-        <ul class="individual">
-		<li><select id="sort1">
-				<option value ="1" SELECTED>Home pairing</option>
-				<option value ="2">Away pairing</option>
-		</select></li>
-		<li><select id="sort2">
-				<option value ="0" SELECTED>Sequence</option>
-				<option value ="1">Home pairing</option>
-				<option value ="2">Away pairing</option>
-		</select></li></ul>
 
 		<h2>Email Subject</h2>
 			<ul class="rounded">
