--- a/nottingham_vets.html
+++ b/nottingham_vets.html
@@ -145,7 +145,7 @@
                 <li class="arrow" id="X1-1"><a href="#match">Beeston Fields 2  <small class="X1-1D"></small></a></li>
                 <li class="arrow" id="X1-2"><a href="#match">Bingham 4  <small class="X1-2D"></small></a></li>
                 <li class="arrow" id="X1-3"><a href="#match">Carlton 1  <small class="X1-3D"></small></a></li>
-                <li class="arrow" id="X1-4"><a href="#match">Crusader  <small class="X1-4D"></small></a></li>
+                <li class="arrow" id="X1-4"><a href="#match">Crusader 1  <small class="X1-4D"></small></a></li>
                 <li class="arrow" id="X1-5"><a href="#match">East Leake 2  <small class="X1-5D"></small></a></li>
                 <li class="arrow" id="X1-6"><a href="#match">Mapperley Park 2  <small class="X1-6D"></small></a></li>
             </ul>
@@ -419,18 +419,6 @@
                 <a class="back" href="#">back</a>
                 <a class="button slideup" id="SendMail" href="#">Email</a>
             </div>
-
-		<h2>Sort results by...</h2>
-        <ul class="individual">
-		<li><select id="sort1">
-				<option value ="1" SELECTED>Home pairing</option>
-				<option value ="2">Away pairing</option>
-		</select></li>
-		<li><select id="sort2">
-				<option value ="0" SELECTED>Sequence</option>
-				<option value ="1">Home pairing</option>
-				<option value ="2">Away pairing</option>
-		</select></li></ul>
 
 		<h2>Email Subject</h2>
 			<ul class="rounded">
