--- a/woodborough.html
+++ b/woodborough.html
@@ -161,10 +161,65 @@
 		</ul>
 	</div>
 
+	<div id="ourPlayers">
+		<div class="toolbar">
+			<h1>Our Team</h1>
+			<a class="back" href="#match">Match</a>
+			<a class="button slideup" id="SavePlayers" href="#">Save</a>
+		</div>
+
+		<h2>Pair 1</h2>
+		<ul class="individual">
+			<li><input type="text" id="ourPlayer1" placeholder="Enter player name" /></li>
+			<li><input type="text" id="ourPlayer2" placeholder="Enter player name" /></li>
+		</ul>
+		<h2>Pair 2</h2>
+		<ul class="individual">
+			<li><input type="text" id="ourPlayer3" placeholder="Enter player name" /></li>
+			<li><input type="text" id="ourPlayer4" placeholder="Enter player name" /></li>
+		</ul>
+		<h2>Pair 3</h2>
+		<ul class="individual">
+			<li><input type="text" id="ourPlayer5" placeholder="Enter player name" /></li>
+			<li><input type="text" id="ourPlayer6" placeholder="Enter player name" /></li>
+		</ul>
+
+		<ul class="individual">
+			<li><a href="#" id="ourPlayers2oppPlayers">Opposition</a></li>
+			<li><a href="#" id="ourPlayers2scorecard">Scorecard</a></li>
+		</ul>
+	</div>
+        <div id="oppPlayers">
+            <div class="toolbar">
+                <h1>Opposition</h1>
+                <a class="back" href="#match">Match</a>
+                <a class="button slideup" id="SavePlayers2" href="#">Save</a>
+            </div>
+
+            <h2>Pair 1</h2>
+            	<ul class="individual">
+		<li><input type="text" id="oppPlayer1" placeholder="Enter player name" /></li>
+            	<li><input type="text" id="oppPlayer2" placeholder="Enter player name" /></li></ul>
+            <h2>Pair 2</h2>
+            	<ul class="individual">
+		<li><input type="text" id="oppPlayer3" placeholder="Enter player name" /></li>
+            	<li><input type="text" id="oppPlayer4" placeholder="Enter player name" /></li></ul>
+            <h2>Pair 3</h2>
+            	<ul class="individual">
+		<li><input type="text" id="oppPlayer5" placeholder="Enter player name" /></li>
+            	<li><input type="text" id="oppPlayer6" placeholder="Enter player name" /></li></ul>
+
+		<ul class="individual">
+	            	<li><a href="#" id="oppPlayers2scorecard">Scorecard</a></li>
+	            	<li><a href="#" id="oppPlayers2ourPlayers">Our Team</a></li>
+		</ul>
+	</div>
+
 	<div id="scorecard">
             <div class="toolbar">
                 <h1>Scorecard</h1>
                 <a class="back" href="#scorecard">Match</a>
+                <a class="button flip" id="ShowPreview" href="#notes">Report</a>
             </div>
         <ul class="individual">
 		<li><select id="toggleTeam">
@@ -261,57 +316,37 @@
  		<div class="oppPairFull"></div>
 	</div>
 
-        <div id="ourPlayers">
+	<div id="preview">
             <div class="toolbar">
-                <h1>Our Team</h1>
-                <a class="back" href="#match">Match</a>
-                <a class="button slideup" id="SavePlayers" href="#">Save</a>
+                <h1>Match Report</h1>
+                <a class="back" href="#">back</a>
+                <a class="button slideup" id="SendMail" href="#">Email</a>
             </div>
 
-            <h2>Pair 1</h2>
-            	<ul class="individual">
-		<li><input type="text" id="ourPlayer1" placeholder="Enter player name" /></li>
-            	<li><input type="text" id="ourPlayer2" placeholder="Enter player name" /></li></ul>
-            <h2>Pair 2</h2>
-            	<ul class="individual">
-		<li><input type="text" id="ourPlayer3" placeholder="Enter player name" /></li>
-            	<li><input type="text" id="ourPlayer4" placeholder="Enter player name" /></li></ul>
-            <h2>Pair 3</h2>
-            	<ul class="individual">
-		<li><input type="text" id="ourPlayer5" placeholder="Enter player name" /></li>
-            	<li><input type="text" id="ourPlayer6" placeholder="Enter player name" /></li></ul>
+		<h2>Sort results by...</h2>
+        <ul class="individual">
+		<li><select id="sort1">
+				<option value ="1" SELECTED>Home pairing</option>
+				<option value ="2">Away pairing</option>
+		</select></li>
+		<li><select id="sort2">
+				<option value ="0" SELECTED>Sequence</option>
+				<option value ="1">Home pairing</option>
+				<option value ="2">Away pairing</option>
+		</select></li></ul>
 
-		<ul class="individual">
-	            	<li><a href="#" id="ourPlayers2oppPlayers">Opposition</a></li>
-	            	<li><a href="#" id="ourPlayers2scorecard">Scorecard</a></li>
-		</ul>
+		<h2>Email Subject</h2>
+			<ul class="rounded">
+				<li id="NoteTitle">Default Email Subject Goes Here</li>
+			</ul>
+		<h2>Email Body</h2>
+			<ul class="rounded">
+				<li id="FixtureNotes"></li>
+				<li><textarea id="PlayerNotes" placeholder="Player Details"></textarea></li>
+				<li><textarea id="NoteDetails" placeholder="(optional comments)"></textarea></li>
+				<li><textarea id="ResultNotes" placeholder="Result Details"></textarea></li>
+			</ul>
 	</div>
-        <div id="oppPlayers">
-            <div class="toolbar">
-                <h1>Opposition</h1>
-                <a class="back" href="#match">Match</a>
-                <a class="button slideup" id="SavePlayers2" href="#">Save</a>
-            </div>
-
-            <h2>Pair 1</h2>
-            	<ul class="individual">
-		<li><input type="text" id="oppPlayer1" placeholder="Enter player name" /></li>
-            	<li><input type="text" id="oppPlayer2" placeholder="Enter player name" /></li></ul>
-            <h2>Pair 2</h2>
-            	<ul class="individual">
-		<li><input type="text" id="oppPlayer3" placeholder="Enter player name" /></li>
-            	<li><input type="text" id="oppPlayer4" placeholder="Enter player name" /></li></ul>
-            <h2>Pair 3</h2>
-            	<ul class="individual">
-		<li><input type="text" id="oppPlayer5" placeholder="Enter player name" /></li>
-            	<li><input type="text" id="oppPlayer6" placeholder="Enter player name" /></li></ul>
-
-		<ul class="individual">
-	            	<li><a href="#" id="oppPlayers2scorecard">Scorecard</a></li>
-	            	<li><a href="#" id="oppPlayers2ourPlayers">Our Team</a></li>
-		</ul>
-	</div>
-
 
     </body>
 </html>
