Re-organization of folder structure to keep all scorecard related scripts and templates together.

--- a/live/club_webapps/beeston_valley.html
+++ b/live/club_webapps/beeston_valley.html
@@ -66,7 +66,7 @@
 		</div>
 	    </div>
 
-
+	    
 	    <h2>Scorecards (offline)</h2>
             <ul class="rounded">
                 <li class="arrow"><a href="#teams">Teams</a></li>
@@ -87,7 +87,7 @@
                 <p>Add this page to your home screen to view the custom icon, startup screen, and full screen mode.</p>
             </div>
         </div>
-
+        
         <div id="teams">
             <div class="toolbar">
                 <h1>Teams</h1>
@@ -414,7 +414,7 @@
             <div class="toolbar">
                 <h1>Match Report</h1>
                 <a class="back" href="#">back</a>
-                <a class="button" id="SendMail" href="#">Email</a>
+                <a class="button slideup" id="SendMail" href="#">Email</a>
             </div>
 
 		<h2>Email Subject</h2>
