--- a/live/club_webapps/trent_uni_students.html
+++ b/live/club_webapps/trent_uni_students.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html manifest="manifest.php?include=woodborough.html">
+<html manifest="manifest.php?include=trent_uni_students.html">
     <head>
         <meta charset="UTF-8" />
-        <title>Woodborough Scorecard</title>
+        <title>Trent Uni Students Scorecard</title>
         <link rel="apple-touch-icon" href="lib/apple-touch-icon.png" />
    		<link rel="apple-touch-startup-image" href="lib/startup-icon.png" />
 
@@ -55,7 +55,7 @@
 
         <div id="home" class="current">
             <div class="toolbar">
-                <h1>Woodborough</h1>
+                <h1>Trent Uni Students</h1>
                 <a class="button slideup" id="infoButton" href="#about">About</a>
             </div>
 
@@ -73,7 +73,7 @@
 	    </ul>
             <h2>NottsBA (online)</h2>
             <ul class="rounded online-required">
-                <li class="forward"><a href="http://www.nottsba.co.uk/mobile/club_tables.php?cnm=woodborough" target="_webapp">League Results</a></li>
+                <li class="forward"><a href="http://www.nottsba.co.uk/mobile/club_tables.php?cnm=trent_uni_students" target="_webapp">League Results</a></li>
                 <li class="forward"><a href="http://www.nottsba.co.uk/mobile/venues.php" target="_webapp">Venues</a></li>
                 <li class="forward"><a href="http://www.nottsba.co.uk/mobile/clubs.php" target="_webapp">Clubs</a></li>
                 <li class="forward"><a href="http://www.nottsba.co.uk/mobile/stringers.php" target="_webapp">Stringers</a></li>
@@ -95,37 +95,6 @@
             </div>
             <ul class="rounded">
 
-                <li class="arrow"><a href="#M1">Mens 1 <small> Division 4A</small></a></li>
-                <li class="arrow"><a href="#M2">Mens 2 <small> Division 5B</small></a></li>
-            </ul>
-        </div>
-
-        <div id="M1" class="fixtures">
-            <div class="toolbar">
-                <h1>Mens 1</h1>
-                <a href="#" class="back">Teams</a>
-            </div>
-            <ul class="rounded">
-                <li class="arrow" id="M1-1"><a href="#match">Beeston Valley 2  <small class="M1-1D"></small></a></li>
-                <li class="arrow" id="M1-2"><a href="#match">David Lloyd Aspley 1  <small class="M1-2D"></small></a></li>
-                <li class="arrow" id="M1-3"><a href="#match">East Leake 3  <small class="M1-3D"></small></a></li>
-                <li class="arrow" id="M1-4"><a href="#match">Nottingham Vets 2  <small class="M1-4D"></small></a></li>
-                <li class="arrow" id="M1-5"><a href="#match">St Giles 2  <small class="M1-5D"></small></a></li>
-                <li class="arrow" id="M1-6"><a href="#match">West Bridgford &amp; LE 3  <small class="M1-6D"></small></a></li>
-            </ul>
-        </div>
-
-        <div id="M2" class="fixtures">
-            <div class="toolbar">
-                <h1>Mens 2</h1>
-                <a href="#" class="back">Teams</a>
-            </div>
-            <ul class="rounded">
-                <li class="arrow" id="M2-1"><a href="#match">Beeston Valley 3  <small class="M2-1D"></small></a></li>
-                <li class="arrow" id="M2-2"><a href="#match">East Leake 4  <small class="M2-2D"></small></a></li>
-                <li class="arrow" id="M2-3"><a href="#match">Redhill 2  <small class="M2-3D"></small></a></li>
-                <li class="arrow" id="M2-4"><a href="#match">St Giles 3  <small class="M2-4D"></small></a></li>
-                <li class="arrow" id="M2-5"><a href="#match">Unity  <small class="M2-5D"></small></a></li>
             </ul>
         </div>
 
@@ -322,18 +291,6 @@
                 <a class="back" href="#">back</a>
                 <a class="button slideup" id="SendMail" href="#">Email</a>
             </div>
-
-		<h2>Sort results by...</h2>
-        <ul class="individual">
-		<li><select id="sort1">
-				<option value ="1" SELECTED>Home pairing</option>
-				<option value ="2">Away pairing</option>
-		</select></li>
-		<li><select id="sort2">
-				<option value ="0" SELECTED>Sequence</option>
-				<option value ="1">Home pairing</option>
-				<option value ="2">Away pairing</option>
-		</select></li></ul>
 
 		<h2>Email Subject</h2>
 			<ul class="rounded">
